--- a/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewpaginationMangaAuthorPost.ejs
+++ b/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewpaginationMangaAuthorPost.ejs
@@ -22,7 +22,7 @@
     </tr>
   </thead>
   <tbody>
-    <% allManga.map((manga, index)=>{%>
+    <% listManga.map((manga, index)=>{%>
       <tr>
         <th scope="row">
           <%=index + 1%>
