--- a/views/pages/Home/read/read.ejs
+++ b/views/pages/Home/read/read.ejs
@@ -54,7 +54,7 @@
             Chap <%=chapter.chap %> : <%=chapter.title %>
         </div>
         <div class="item-info">
-            <a href="" class="item-name"><i class="fa-solid fa-book"></i>
+            <a class="item-name" onclick="viewDetails('<%=mangaDetail.slug%>')"><i class="fa-solid fa-book"></i>
                 <%=mangaDetail.name%>
             </a>
             <a href="" class="item-author"><i class="fa-solid fa-file-pen"></i>
