--- a/views/pages/admin/manageManga/editManga/editManga.ejs
+++ b/views/pages/admin/manageManga/editManga/editManga.ejs
@@ -59,7 +59,7 @@
           </form>
         </div>
         <div class="mainUserProfile__itemCenter">
-          <img class="preview-avatar" src="<%= manga.avatar %>" alt="">
+          <img class="preview-avatar" src="/<%= manga.avatar %>" alt="">
         </div>
         <div class="mainUserProfile__itemRight">
           <button class="btnEdit editAvatar">Edit</button>
