--- a/views/pages/admin/manageManga/viewAllManga/viewAllMangaEjs/paginationManga.ejs
+++ b/views/pages/admin/manageManga/viewAllManga/viewAllMangaEjs/paginationManga.ejs
@@ -32,7 +32,7 @@
           <%=manga.name%>
 
         </td>
-        <td><img src="<%=manga.avatar%>" alt="" width="60px"></td>
+        <td><img src="/<%=manga.avatar%>" alt="" width="60px"></td>
         <td>
           <%=manga.price%>
         </td>
