--- a/views/pages/admin/manageManga/viewDetailManga/viewDetailManga.ejs
+++ b/views/pages/admin/manageManga/viewDetailManga/viewDetailManga.ejs
@@ -30,7 +30,7 @@
         </p>
       </div>
       <div class="right-info">
-        <img src="<%= manga.avatar %>" alt="avatar" width="50px" />
+        <img src="/<%= manga.avatar %>" alt="avatar" width="50px" />
       </div>
     </div>
     <!-- chapter -->
