--- a/views/pages/Home/page/page.ejs
+++ b/views/pages/Home/page/page.ejs
@@ -28,12 +28,12 @@
     <!-- menu -->
     <!-- main -->
     <a href="" class="large-background">
-        <img src="<%=mangaDetail.backgroud_avatar%>" alt="" srcset="">
+        <img src="/<%=mangaDetail.backgroud_avatar%>" alt="" srcset="">
     </a>
     <div class="main-container">
         <div class="item-container">
             <div class="item-thumbnail">
-                <img src="<%=mangaDetail.avatar%>" alt="">
+                <img src="/<%=mangaDetail.avatar%>" alt="">
             </div>
             <div class="item-info">
                 <p class="item-title">
