--- a/views/pages/findByCategory/findByCategory.ejs
+++ b/views/pages/findByCategory/findByCategory.ejs
@@ -36,7 +36,7 @@
                     <%manga.map((m)=>{%>
                         <li class="card-item" onclick="viewDetails('<%=m.slug%>')">
                             <a>
-                                <img src="<%=m.avatar%>" alt="">
+                                <img src="/<%=m.avatar%>" alt="">
                             </a>
                             <div class="bookname">
                                 <%=m.name%>
