--- a/views/pages/Home/home/home.ejs
+++ b/views/pages/Home/home/home.ejs
@@ -1,192 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/views/pages/Home/home/home.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/views/pages/Home/home/home.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <meta
+      name="zalo-platform-site-verification"
+      content="RjE3DElk409kth4QwFCIEnZVbsBqe48vEJa"
+    />
     <title>Home</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <% if(userDetail){%>
-            <%- include('../../../components/login_header/login_header') %>
-                <%}else{%>
-                    <!-- menu -->
-                    <%- include('../../../components/headerHome/header') %>
-                        <!-- mobile -->
-                        <%- include('../../../components/headerHome/headerMobile') %>
-                            <% } %>
+      <% if(userDetail){%> <%-
+      include('../../../components/login_header/login_header') %> <%}else{%>
+      <!-- menu -->
+      <%- include('../../../components/headerHome/header') %>
+      <!-- mobile -->
+      <%- include('../../../components/headerHome/headerMobile') %> <% } %>
     </header>
     <!-- menu -->
     <!-- main -->
     <div class="main-container">
-        <%if(manga.length>= 5){%>
-            <div class="banner">
-                <div class="banner_left">
-                    <a onclick="viewDetails('<%=manga[1]?.slug%>')">
-                        <img src='<%=manga[1]?.avatar%>' alt="">
-                        <%if(chapter[1]=="" ){%>
-                            <%}else{%>
-                                <div class="cover_chapter">Chap <%=chapter[1]?.length%>
-                                </div>
-                                <%}%>
-                                    <div class="cover_shadow">
-                                        <%= manga[1]?.name%>
-                                    </div>
-                    </a>
-                    <a onclick="viewDetails('<%=manga[2]?.slug%>')">
-                        <img src='<%=manga[2]?.avatar%>' alt="">
-                        <%if(chapter[2]=="" ){%>
-                            <%}else{%>
-                                <div class="cover_chapter">Chap <%=chapter[2]?.length%>
-                                </div>
-                                <%}%>
-                                    <div class="cover_shadow">
-                                        <%= manga[2]?.name%>T
-                                    </div>
-                    </a>
-                </div>
-                <div class="banner_mid">
-                    <a onclick="viewDetails('<%=manga[0]?.slug%>')">
-                        <img src='<%=manga[0]?.avatar%>' alt="">
-                        <%if(chapter[0]=="" ){%>
-                            <%}else{%>
-                                <div class="cover_chapter">Chap <%=chapter[0]?.length%>
-                                </div>
+      <%if(manga.length>= 5){%>
+      <div class="banner">
+        <div class="banner_left">
+          <a onclick="viewDetails('<%=manga[1]?.slug%>')">
+            <img src="<%=manga[1]?.avatar%>" alt="" />
+            <%if(chapter[1]=="" ){%> <%}else{%>
+            <div class="cover_chapter">Chap <%=chapter[1]?.length%></div>
+            <%}%>
+            <div class="cover_shadow"><%= manga[1]?.name%></div>
+          </a>
+          <a onclick="viewDetails('<%=manga[2]?.slug%>')">
+            <img src="<%=manga[2]?.avatar%>" alt="" />
+            <%if(chapter[2]=="" ){%> <%}else{%>
+            <div class="cover_chapter">Chap <%=chapter[2]?.length%></div>
+            <%}%>
+            <div class="cover_shadow"><%= manga[2]?.name%>T</div>
+          </a>
+        </div>
+        <div class="banner_mid">
+          <a onclick="viewDetails('<%=manga[0]?.slug%>')">
+            <img src="<%=manga[0]?.avatar%>" alt="" />
+            <%if(chapter[0]=="" ){%> <%}else{%>
+            <div class="cover_chapter">Chap <%=chapter[0]?.length%></div>
 
-                                <%}%>
-                                    <div class="cover_shadow_mid">
-                                        <%= manga[0]?.name%>
-                                    </div>
-                    </a>
+            <%}%>
+            <div class="cover_shadow_mid"><%= manga[0]?.name%></div>
+          </a>
+        </div>
+        <div class="banner_right">
+          <a onclick="viewDetails('<%=manga[3]?.slug%>')">
+            <img src="<%=manga[3]?.avatar%>" alt="" />
+            <%if(chapter[3]=="" ){%> <%}else{%>
+            <div class="cover_chapter">Chap <%=chapter[3]?.length%></div>
+            <%}%>
+            <div class="cover_shadow"><%= manga[3]?.name%></div>
+          </a>
+          <a onclick="viewDetails('<%=manga[4]?.slug%>')">
+            <img src="<%=manga[4]?.avatar%>" alt="" />
+            <%if(chapter[4]=="" ){%> <%}else{%>
+            <div class="cover_chapter">Chap <%=chapter[4]?.length%></div>
+            <%}%>
+            <div class="cover_shadow"><%= manga[4]?.name%></div>
+          </a>
+        </div>
+      </div>
+      <%}else{}%>
+      <div class="suggest">
+        <h2><i class="fa-solid fa-star"></i>The most bought Manga</h2>
+        <div class="suggest-bar">
+          <ul>
+            <% muaNhieu.map((m, index)=>{%>
+            <li class="card-item" onclick="viewDetails('<%=m?.slug%>')">
+              <a>
+                <img src="<%=m?.avatar%>" alt="" />
+                <div class="more-info">
+                  <div class="hot">TOP <%= index + 1%></div>
                 </div>
-                <div class="banner_right">
-                    <a onclick="viewDetails('<%=manga[3]?.slug%>')">
-                        <img src='<%=manga[3]?.avatar%>' alt="">
-                        <%if(chapter[3]=="" ){%>
-                            <%}else{%>
-                                <div class="cover_chapter">Chap <%=chapter[3]?.length%>
-                                </div>
-                                <%}%>
-                                    <div class="cover_shadow">
-                                        <%= manga[3]?.name%>
-                                    </div>
-                    </a>
-                    <a onclick="viewDetails('<%=manga[4]?.slug%>')">
-                        <img src='<%=manga[4]?.avatar%>' alt="">
-                        <%if(chapter[4]=="" ){%>
-                            <%}else{%>
-                                <div class="cover_chapter">Chap <%=chapter[4]?.length%>
-                                </div>
-                                <%}%>
-                                    <div class="cover_shadow">
-                                        <%= manga[4]?.name%>
-                                    </div>
-                    </a>
+              </a>
+              <div class="bookname"><%=m?.name%></div>
+              <%if(chapter[index]?.mangaID===m.id){%>
+              <div class="lastest-chapter">
+                Chapter <%=chapter[index][chapter[index]?.length-1]?.chap%>
+              </div>
+              <%}%>
+            </li>
+            <%})%>
+          </ul>
+        </div>
+      </div>
+      <div class="main">
+        <h2>
+          <i class="fa-solid fa-cloud-arrow-down"></i> Newly updated Manga
+        </h2>
+        <div class="main-content">
+          <ul class="list-item">
+            <%- include('./pagination') %>
+          </ul>
+          <div class="comment-zone">
+            <div class="commentMainLayout">
+              <div class="allCommentContainer">
+                <div class="showComment">
+                  <%comment.map((m, index)=>{%>
+                  <div class="showComment__info">
+                    <a class="showComment__info--avatar"
+                      ><img src="<%=m?.userID?.avatar%>" alt=""
+                    /></a>
+                    <div class="showComment__info--nameAndTime">
+                      <a>
+                        <%if(!m?.mangaID){%>
+                        <p
+                          onclick="viewDetails('<%=m?.chapterID?.mangaID.slug%>')"
+                        >
+                          <%=m?.chapterID?.mangaID.slug%> chap
+                          <%=m?.chapterID?.chap%>
+                        </p>
+                        <%}else{%>
+                        <p onclick="viewDetails('<%=m?.mangaID%>')">
+                          <%=m?.mangaID%>
+                        </p>
+                        <%}%> <%=m?.userID?.username%>
+                      </a>
+                      <!-- <p>Publish</p> -->
+                    </div>
+                  </div>
+                  <div class="showComment__content">
+                    <%=m?.title%>
+                    <p>
+                      <%if(m?.audio.split(".").includes("jpg", "png" ,
+                      "image/webp" )){%>
+                      <img src="<%= m?.audio  %> " alt="" width="100px" />
+                      <%}else if(m?.audio.split(".").includes("m4a",'mp3','WMA'
+                      )){%>
+                      <audio controls>
+                        <source src="<%= m?.audio  %> " type="audio/ogg" />
+                        <source src="<%= m?.audio  %> " type="audio/ogg" />
+                      </audio>
+                      <%}else{%> <%}%>
+                    </p>
+                  </div>
+                  <i
+                    class="fa-solid fa-thumbs-up like-total"
+                    onclick="like('<%=m?._id%>')"
+                  >
+                    <%=m.reaction?.length%>
+                  </i>
+                  <br />
+                  <%})%>
                 </div>
+              </div>
             </div>
-            <%}else{}%>
-                <div class="suggest">
-                    <h2><i class="fa-solid fa-star"></i>The most bought Manga</h2>
-                    <div class="suggest-bar">
-                        <ul>
-                            <% muaNhieu.map((m, index)=>{%>
-                                <li class="card-item" onclick="viewDetails('<%=m?.slug%>')">
-                                    <a>
-                                        <img src='<%=m?.avatar%>' alt="">
-                                        <div class="more-info">
-                                            <div class="hot">TOP <%= index + 1%>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div class="bookname">
-                                        <%=m?.name%>
-                                    </div>
-                                    <%if(chapter[index]?.mangaID===m.id){%>
-                                        <div class="lastest-chapter">
-                                            Chapter <%=chapter[index][chapter[index]?.length-1]?.chap%>
-                                        </div>
-                                        <%}%>
-                                </li>
-                                <%})%>
-                        </ul>
-                    </div>
-                </div>
-                <div class="main">
-                    <h2><i class="fa-solid fa-cloud-arrow-down"></i> Newly updated Manga</h2>
-                    <div class="main-content">
-                        <ul class="list-item">
-                            <%- include('./pagination') %>
-                        </ul>
-                        <div class="comment-zone">
-                            <div class="commentMainLayout">
-                                <div class="allCommentContainer">
-                                    <div class="showComment">
-                                        <%comment.map((m, index)=>{%>
-                                            <div class="showComment__info">
-                                                <a class="showComment__info--avatar"><img src="<%=m?.userID?.avatar%>"
-                                                        alt=""></a>
-                                                <div class="showComment__info--nameAndTime">
-                                                    <a>
-                                                        <%if(!m?.mangaID){%>
-                                                            <p onclick="viewDetails('<%=m?.chapterID?.mangaID.slug%>')">
-                                                                <%=m?.chapterID?.mangaID.slug%> chap
-                                                                    <%=m?.chapterID?.chap%>
-                                                            </p>
-                                                            <%}else{%>
-                                                                <p onclick="viewDetails('<%=m?.mangaID%>')">
-                                                                    <%=m?.mangaID%>
-                                                                </p>
-                                                                <%}%>
-                                                                    <%=m?.userID?.username%>
-                                                    </a>
-                                                    <!-- <p>Publish</p> -->
-                                                </div>
-                                            </div>
-                                            <div class="showComment__content">
-                                                <%=m?.title%>
-                                                    <p>
-                                                        <%if(m?.audio.split(".").includes("jpg", "png" , "image/webp"
-                                                            )){%>
-                                                            <img src="<%= m?.audio  %> " alt="" width="100px">
-                                                            <%}else if(m?.audio.split(".").includes("m4a",'mp3','WMA'
-                                                                )){%>
-                                                                <audio controls>
-                                                                    <source src="<%= m?.audio  %> " type="audio/ogg">
-                                                                    <source src="<%= m?.audio  %> " type="audio/ogg">
-                                                                </audio>
-                                                                <%}else{%>
-                                                                    <%}%>
-                                                    </p>
-                                            </div>
-                                            <i class="fa-solid fa-thumbs-up like-total" onclick="like('<%=m?._id%>')">
-                                                <%=m.reaction?.length%>
-                                            </i>
-                                            <br>
-                                            <%})%>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- main -->
     <!-- footer -->
     <%- include('../../../components/footer') %>
-        <!-- footer -->
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+    <!-- footer -->
+  </body>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
     integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/views/components/headerHome/header.js"></script>
-<script src="/views/pages/Home/home/home.js"></script>
-<!-- <script src="/views/components/headerHome/headerMobile.js"></script> -->
-
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script src="/views/components/headerHome/header.js"></script>
+  <script src="/views/pages/Home/home/home.js"></script>
+  <!-- <script src="/views/components/headerHome/headerMobile.js"></script> -->
 </html>
